# ad-1

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: code_style.yml  code_test.yml  codeql.yml  dist_build.yml  docs_build.yml  publish_dist.yml
ad/: __init__.py
ad/admath/: __init__.py  admath.py
ad/linalg/: __init__.py  linalg.py
docs/: api.md  index.md  installation.md  quickstart.md  references.md  theory.md
tests/: test_core.py  test_numpy.py
